

add_library(lzo_plugin MODULE H5Zlzo.c)
include(FindLZO.cmake)
target_include_directories(lzo_plugin PRIVATE
${LZO_INCLUDE_DIR} ${HDF5_INCLUDE_DIRS})
target_link_libraries(lzo_plugin PRIVATE
${LZO_LIBRARIES})
set_target_properties(lzo_plugin PROPERTIES
    OUTPUT_NAME ${PLUGIN_NAME}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HDF5_PLUGIN_PATH}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HDF5_PLUGIN_PATH}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HDF5_PLUGIN_PATH}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_HDF5_PLUGIN_PATH}
    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HDF5_PLUGIN_PATH}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_HDF5_PLUGIN_PATH}
    )


include(GNUInstallDirs)
set(CMAKE_INSTALL_PLUGINDIR ${CMAKE_INSTALL_LIBDIR}/plugins)


install(TARGETS lzo_plugin DESTINATION ${CMAKE_INSTALL_PLUGINDIR})
